--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electromagnetic Abiogenesis</title>
 </head>
-<body style="font-family: sans-serif; text-align: center; margin-top: 20vh;">
-    <h1>Electromagnetic Abiogenesis</h1>
-    <p>Exploring how life emerges from electromagnetic phenomena.</p>
-    <p>Research & updates coming soon.</p>
+<body>
+    <h1>Welcome to ElectromagneticAbiogenesis.com</h1>
+    <p>This site is under construction. More to come soon.</p>
 </body>
 </html>
