--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electromagnetic Abiogenesis</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: radial-gradient(ellipse at center, #0b0f1a 0%, #05070d 100%);
+            color: #e0e0e0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+        }
+        h1 {
+            font-size: 2.5rem;
+            color: #00ffe7;
+            margin-bottom: 0.5rem;
+        }
+        h2 {
+            font-size: 1.2rem;
+            color: #9be9ff;
+            margin-bottom: 2rem;
+        }
+        p {
+            max-width: 600px;
+            line-height: 1.6;
+            font-size: 1rem;
+            margin-bottom: 2rem;
+        }
+        .btn {
+            display: inline-block;
+            padding: 0.75rem 1.5rem;
+            color: #0b0f1a;
+            background: #00ffe7;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+        .btn:hover {
+            background: #00bfa5;
+        }
+        footer {
+            position: absolute;
+            bottom: 1rem;
+            font-size: 0.8rem;
+            color: #777;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to ElectromagneticAbiogenesis.com</h1>
-    <p>This site is under construction. More to come soon.</p>
+    <h1>Electromagnetic Abiogenesis</h1>
+    <h2>Rethinking the Origins of Life & Intelligence</h2>
+    <p>
+        Exploring how electromagnetic fields can initiate, organize, and sustain life-like systems across biological, planetary, and cosmic scales.
+        Bridging bioelectricity, systems theory, and frontier physics, this research proposes a new paradigm for understanding emergent intelligence beyond chemistry.
+    </p>
+    <a class="btn" href="https://github.com/mariaperera1/electromagneticabiogenesis" target="_blank">View Project on GitHub</a>
+    <footer>
+        &copy; 2025 Maria Perera | Axionix Research
+    </footer>
 </body>
 </html>
